test quick vz template

--- a/templates/vz/101.rst
+++ b/templates/vz/101.rst
@@ -1,6 +1,7 @@
 .. _101:
 
-101
-----
-
-Info de mon vz !!!!
+{{ VZ.id }}
+------------
+  * Physical host : {{ VZ.physical_host }}
+  * Hostname : {{ VZ.hostname }}
+  * Status : {{ VZ.status }}
